src/test/resources/query/error/queryWithOrderByAndLookUp/schema.graphqls
type Query {
  films(filmIds: [ID]! @field(name : "FILM_ID") @lookupKey, orderBy: FilmOrder @orderBy): [Film!]! #lookupKey and @orderBy cannot be used together
}

type Film implements Node @table {
  id: ID!
  title: String!
}

input FilmOrder {
  direction: OrderDirection!
  orderByField: FilmOrderByField!
}

enum FilmOrderByField {
  TITLE @index(name : "IDX_TITLE")
}